@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<div xmlns:lsp="http://staldal.nu/LSP/core">
+<lsp:output method="html-fragment" encoding="UTF-8"/>
+<p>Hello,<br/>world!</p>
+</div>
