@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<html xmlns:lsp="http://staldal.nu/LSP/core">
+<lsp:output method="html" encoding="UTF-8"/>
+<head><title>Test</title></head>
+<body>
+<p>Hello,<br/>world!</p>
+</body>
+</html>
