@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<lsp:root xmlns:lsp="http://staldal.nu/LSP/core">
+<lsp:output method="text" encoding="UTF-8"/>First line
+Second line
+Third line
+</lsp:root>
