@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<div xmlns:lsp="http://staldal.nu/LSP/core"
+	  xmlns="http://www.w3.org/1999/xhtml">
+<lsp:output method="xhtml-fragment" encoding="UTF-8"/>
+<p>Hello,<br/>world!</p>
+</div>
