@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<html xmlns:lsp="http://staldal.nu/LSP/core"
+	  xmlns="http://www.w3.org/1999/xhtml">
+<lsp:output method="xhtml" encoding="UTF-8"/>
+<head><title>Test</title></head>
+<body>
+<p>Hello,<br/>world!</p>
+</body>
+</html>
