@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<foo xmlns:lsp="http://staldal.nu/LSP/core"
+	 xmlns="http://foobar.com/foo">
+<lsp:output method="xml" encoding="UTF-8"/>
+<p>Hello,<br/>world!</p>
+</foo>
+
